[package]
name = "gitgud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
git2 = "0.15.0"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
url = "2.3.1"
